piano/style/style.css
body {
	background-color: skyblue;
}

#wrapper {
	position: absolute; 
	top: 0; 
	left: 0; 
	width: 100vw; 
	height: 100%; 
}

#top {
	text-align: center;
	position: absolute;
	top: 0;
	left: 0;
	height: 50%;
	width: 100vw;
}

#top video {
	width: 85%;
	height: auto;

	max-height: 75%;
}

#top h1 {
	font-size: 30px;
	margin: 2px 0px 10px;
	font-family: sans-serif;
}

#pianoWrapper {
	position: absolute;
	top: 50%;
	left: 0;
	width: 100vw;
	height: 50%;
	overflow-x: scroll;
}

#piano {
	width: 1440px; 
	height: 100%;
	margin-left: 0;
	overflow-x: auto;
	overflow-y: hidden;
}

.white {
	position: relative;
	height: 100%; 
	width: 72px; 
	float: left;
	margin-left: -25px;
	z-index: 10;
}

.white.f, .white.c {
	margin-left: 0px;
}

.black {
	position: relative;
	height: 59%; 
	width: 45px; 
	margin-left: -25px; 
	margin-bottom: 50%; 
	float: left;
	z-index: 15;
}

